fixed issue with page heaing not appearing on smaller screen sizes and center main site header

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -7,8 +7,10 @@ html, body {
 body {
     background: url('/media/home-bg-image.png') no-repeat center center fixed;
     background-size: cover;
+    height: calc(100vh - 164px);
     color: #555;
     font-family: 'Gayathri';
+    padding-top: 4rem; 
 }
 
 .overlay {
